fixed some typos and added general improvements to notes of wtg

--- a/electives/wtg/wyk/2020-02-26/2020-02-26.md
+++ b/electives/wtg/wyk/2020-02-26/2020-02-26.md
@@ -69,7 +69,7 @@ $$
 
 graf $(V, E, \phi)$
 
-$deg(v) = 2\sum_{e \in L} || \phi(e) = \{ v \} || + \sum_{e \in D}\llbracket v \in \phi(e) \rrbracket$\
+$deg(v) = 2\sum_{e \in L} \llbracket \phi(e) = \{ v \} \rrbracket + \sum_{e \in D}\llbracket v \in \phi(e) \rrbracket$\
 $L = \{ e \in E: |\phi(e)| = 1 \}$\
 $D = \{ e \in E: |\phi(e)| = 2 \}$
 
@@ -86,13 +86,13 @@ Dla dowolnego grafu mamy $\sum_{v \in V}\deg(v) = 2|E|$
 ### Dowód
 
 $$
-\sum_{v \in V}\deg(v) = \sum_{v \in V}(2\sum_{e \in L}||\phi(e) = \{v\}|| + \sum_{e \in D}||v \in \phi(e)||) =
+\sum_{v \in V}\deg(v) = \sum_{v \in V}(2\sum_{e \in L}\llbracket \phi(e) = \{v\} \rrbracket + \sum_{e \in D}\llbracket v \in \phi(e)\rrbracket) =
 $$
 $$
-2\sum_{v \in V}\sum_{e\in L}||\phi(e) = \{v\}|| + \sum_{v \in V}\sum_{e \in D}||v \in \phi(e)|| =
+2\sum_{v \in V}\sum_{e\in L} \llbracket\phi(e) = \{v\}\rrbracket + \sum_{v \in V}\sum_{e \in D} \llbracket v \in \phi(e) \rrbracket =
 $$
 $$
-2\sum_{e \in L}\sum_{v \in V}||\phi(e) = \{v\}|| + \sum_{e \in D}\sum_{v \in V}||v \in \phi(e)|| =
+2\sum_{e \in L}\sum_{v \in V} \llbracket\phi(e) = \{v\}\rrbracket + \sum_{e \in D}\sum_{v \in V} \llbracket v \in \phi(e) \rrbracket =
 $$
 $$
 2\sum_{e \in L}1 + \sum_{e \in D}2 = 2|L| + 2|D| = 2(|L| + |D|) = 2|E|
