--- a/electives/wtg/wyk/2020-03-04/2020-03-04.md
+++ b/electives/wtg/wyk/2020-03-04/2020-03-04.md
@@ -25,7 +25,7 @@ rzędy wierzchołków:
 $d_2 - 1$\
 $d_3 - 1$\
 $d_4 - 1$\
-$d_5 - 1...$
+$d_5 - 1\dots$
 
 dołączamy do każdego z powyższych dodatkowy węzeł:
 
@@ -82,7 +82,7 @@ $G'$:
   2'. $\deg_{6'}(y) = \deg_6(y)$
 3. $\sum_{u \in \mathcal{N}(1)}\deg(u) ? \sum_{u \in \mathcal{N}(1)}\deg_G(u)$
 
-Czyli jest graf $G$ na $\{ 1,...,n \}$ taki, że:\
+Czyli jest graf $G$ na $\{ 1,...,n \}$ taki, że:
 1. jego $\deg$, to $(d_1,...,d_n)$
 2. $\mathcal{N}(1) = \{2,3,...,d_1+1\}$\
    $\deg(i) = d_i~dla~i =2,...,d_1+1$
@@ -98,8 +98,8 @@ $\blacksquare$
 - graf cykliczny: $C_N$ - jak liniowy, ale połączony w cykl \<insert graph\>\
   ![zoo 4](graphs/zoo-4.png)
 - graf $(V,E)$ jest dwudzielny, jeśli istnieją $X,Y$ takie, że:
-  1. $X\cup Y = V \land X \cap Y = \emptyset \land X \neq \emptyset \land Y \neq \emptyset$
-  2. $E \subseteq \{ \{x,y\}: x \in X \land y \in Y \}$
+    1. $X\cup Y = V \land X \cap Y = \emptyset \land X \neq \emptyset \land Y \neq \emptyset$
+    2. $E \subseteq \{ \{x,y\}: x \in X \land y \in Y \}$
 
     ![zoo 3](graphs/zoo-3.png)
 
@@ -110,8 +110,8 @@ $\blacksquare$
 
 Mamy $G(V,E)$
 
-1. Dopełnienie: $\overline{G}=(V, [V]^2\setminus E)$; uwagi:
-   1. $\overline{K_n} = E_n$
+1. Dopełnienie: $\overline{G}=(V, [V]^2\setminus E)$\
+    *przykład: $\overline{K_n} = E_n$*
 2. Usunięcie krawędzi: $e \in E$: $G\setminus e = (V, E \setminus \{e\})$
 3. Usunięcie węzła: $x \in V$: $G - x = (V \setminus\{x\}, E \cap [V \setminus \{x\}]^2)$
 
@@ -135,16 +135,16 @@ $$
 
 ![krawędziowy przykład](graphs/krawędziowy.png)
 
-$L(K_3) \simeq K_3$
+$L(K_3) \underset{IZO}{\cong} K_3$
 
 Konstrukcja:
 
 - $K_5 = (\{0,1,2,3,4\}, [0...4]^2)$
 
-  Tu mamy $\binom{5}{2} = \frac{5*4}{2} = 10$ krawędzi.
-- $L(K_5)=(\{0...4\}^2, \{\{A,B\}\in[[0,4]^2]^2: A\neq B \land A \cap B \neq \emptyset\})$
-- $\overline{L(K_5)} = (\{\{0...4\}^2: [\{0...4\}^2]^2: A \neq B \land A \cap B = \emptyset\})$
-- Fakt: $L(K_5) \cong$ graf Petersena
+  Tu mamy $\binom{5}{2} = \frac{5~\cdot~4}{2} = 10$ krawędzi.
+- $L(K_5) = \left(\{0...4\}^2, \left\{\{A,B\}\in\left[\left[0,4\right]^2\right]^2: A\neq B \land A \cap B \neq \emptyset\right\}\right)$
+- $\overline{L(K_5)} = \left(\left\{\{0...4\}^2: \left[\left\{0...4\right\}^2\right]^2: A \neq B \land A \cap B = \emptyset\right\}\right)$
+- Fakt: $L(K_5) \underset{IZO}{\cong}$ graf Petersena
 
 ## Hiper-kostka
 
