--- a/electives/wtg/wyk/2020-03-18/2020-03-18.md
+++ b/electives/wtg/wyk/2020-03-18/2020-03-18.md
@@ -38,7 +38,7 @@ Krawędź $e \in E$ w grafie spójnym $G=(V,E)$ nazywamy mostem jeśli graf $G-e
 
 ![most](most.png)
 
-Zauważ, że po usunięciu mostu z grafu z tego rysunku graf rozpada się na dwie składowe spójne. Tak jest zawsze - jest to jedno z zadań które pojawi się na [liście](../../cw/lista-2/lista-2.md).
+Zauważ, że po usunięciu mostu z grafu z tego rysunku graf rozpada się na dwie składowe spójne. Tak jest zawsze - jest to jedno z zadań które pojawi się na [liście](https://cs.pwr.edu.pl/cichon/2019_20_b/Grafy/GraphsZadania.pdf).
 
 ## Lemat B
 
@@ -109,4 +109,4 @@ Niech $T$ będzie $\subseteq$-minimalnym elementem $\mathcal{H}$. Wtedy $(V,T)$ 
 
 ### D-d *bardziej algorytmiczny* $Twierdzenia$ #3
 Usuwajmy kolejno z $E$ krawędzie z cykli tak długo jak jest jakiś cykl. Na mocy [Lematu B](#lemat-b) nie psujemy spójności. A uzyskamy acykliczność. Otrzymamy więc w ten sposób drzewo.\
-Na [liście zadań](../../cw/lista-3/lista-3.md) będzie do przemyślenia jeszcze inny sposób budowania drzewa rozpinającego.
+Na [liście zadań](../../cw/lista-3/lista-3.md#zadanie-39) będzie do przemyślenia jeszcze inny sposób budowania drzewa rozpinającego.
