--- a/electives/wtg/wyk/2020-03-25/2020-03-25.md
+++ b/electives/wtg/wyk/2020-03-25/2020-03-25.md
@@ -49,7 +49,7 @@ Powtarzamy proces aż nie wykorzystamy wszystkich elementów ciągu $P$.
 Zatem, pokazaliśmy proces przejścia z drzewa do ciągu Prüfera oraz na odwrót co kończy dowód.\
 $\blacksquare$
 
-Bardzo obrazowo i klarownie dowód został przedstawiony [tu](https://www.youtube.com/watch?v=Ve447EOW8ww) oraz [tutaj](https://www.youtube.com/watch?v=utfW-xsDp3Y).
+Bardzo obrazowo i klarownie dowód został przedstawiony przez dr Sarada Herke [tu](https://www.youtube.com/watch?v=Ve447EOW8ww) oraz [tutaj](https://www.youtube.com/watch?v=utfW-xsDp3Y).
 
 ## $Definicje$ rzędy wierzchołków
 
@@ -98,16 +98,18 @@ L = 0
 visited = [v]
 active  = N(v)
 while active != []:
-  L += 1 # linijka 5
+  L += 1 # (1)
   visited += active
   active = [y for x in active for y in N(x) if y not in visited]
 
 return L
 ```
-Zauważmy, że po wykonaniu linijki `5` mamy `active` $=\{x \in V(G):~d(v,x) = L\}$ przez cały czas działania pętli.
+Zauważmy, że po operacji `(1)` mamy `active` $=\{x \in V(G):~d(v,x) = L\}$ przez cały czas działania pętli.
 
 Metodę tę nazywamy metodą *„przeszukiwania grafu wszerz”*.
 
 ![ecc-1](ecc-1.png)
 ![ecc-2](ecc-2.png)
 ![ecc-3](ecc-3.png)
+
+Powyższa metoda została opisana również na [wykładzie AiSD](../../../../4th-semester/aisd/wyk/2020-05-18/breadth-first-search.md)
