--- a/electives/wtg/wyk/2020-04-01/2020-04-01.md
+++ b/electives/wtg/wyk/2020-04-01/2020-04-01.md
@@ -47,7 +47,7 @@ Udowodnimy to $Twierdzenie$ w późniejszej części tego wykładu.
 
 Niech $G$ będzie zbiorem punktów i krawędzi.\
 Jest to zbiór domknięty.\
-Zbiór $\reals^2 \setminus G$ rozkłada się na spójne składowe zwane regionami *(ścianami, why tho)*:
+Zbiór $\reals^2 \setminus G$ rozkłada się na spójne składowe zwane regionami *(ścianami)*:
 
 ![reprezentacja planarna grafu](reprezentacja-planarna-grafu.png)
 
@@ -64,7 +64,7 @@ Niech $F$ oznacza liczbę regionów *(ścian)*, $E$ liczbę krawędzi oraz $V$ l
 
 ## D-d $\text{Twierdzenia}$ Eulera
 
-Ustalmy liczbę $V$. Dowód robimy indukcją po liczbie krawędzi. Ze spójności grafy wynika, że $E \ge V-1$.
+Ustalmy liczbę $V$. Dowód robimy indukcją po liczbie krawędzi. Ze spójności grafu wynika, że $E \ge V-1$.
 
 Jeśli $E=V-1$, to graf jest drzewem, nie ma więc cyklu, więc ma tylko jeden region *(ścianę)*.
 Oczywiście wówczas mamy faktycznie
@@ -76,7 +76,7 @@ Załóżmy więc, że $E>V-1$. Wtedy graf ma cykl. Niech $e$ będzie krawędzią
 Usuńmy $e$ z grafu:
 ![d-d Euler](d-d-euler.png)
 
-Liczba $E$ zmalała o jeden, liczba $F$ zmalała o jeden, a liczba $V$ nie uległa zmianie. Wartość wyrażenia $F + E + V$ nie uległa więc zmianie. Więc jest równa $2$.
+Liczba $E$ zmalała o jeden, liczba $F$ zmalała o jeden, a liczba $V$ nie uległa zmianie. Wartość wyrażenia $F - E + V$ nie uległa więc zmianie. Więc jest nadal równa $2$.
 
 ## Wniosek z $\text{Twierdzenia}$ Eulera
 
@@ -156,7 +156,7 @@ Gdyby był planarny to $9 = E \le 2V - 4 = 2 \cdot 6 - 4 = 8$.
 ## $\text{Twierdzenie}$ #1
 
 Załóżmy, że $G = (V,E)$ jest [grafem planarnym](#textdefinicja-graf-planarny).
-Wtedy istnieje wierzchołek $v$ taki, ze $\deg(v) \le 5$
+Wtedy istnieje wierzchołek $v$ taki, że $\deg(v) \le 5$
 
 Ta własność przyda nam się, gdy będziemy zajmowali się kolorowaniem grafów.
 
