--- a/electives/wtg/wyk/2020-04-08/2020-04-08.md
+++ b/electives/wtg/wyk/2020-04-08/2020-04-08.md
@@ -20,7 +20,7 @@ Wielościan o następujących własnościach:
 2. każdy **wierzchołek** jest tego **samego rzędu**
 3. wszystkie ściany *(regiony)* są przystającymi wielokątami foremnymi.
 
-*Przykłady: sześcian, czworościan foremny*
+*Przykłady: [sześcian, czworościan foremny](../../cw/lista-4/lista-4.md#zadanie-43-świąteczne)*
 
 ## $\text{Twierdzenie}$ #1
 **Jest pięć brył platońskich.**
