--- a/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/values/strings.xml
+++ b/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="choose_dir_prompt">Choose a directory</string>
     <string name="image_location">Image location:</string>
     <string name="stars">stars</string>
+    <string name="image_last_modified">Last modified</string>
 </resources>
